--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
         </dependency>
 
         -->
+        <dependency>
+            <groupId>unknown.binary</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>     
         <resources>
